--- a/index.html
+++ b/index.html
@@ -32,8 +32,50 @@
     <title>My Portfolio | Yogi Astriana</title>
   </head>
   <body id="home">
+
+        <!-- Carousel start -->
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="/img/projects/kopikenangansenja.png" class="d-block w-100" alt="project 1" style="height: 350px;">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="/img/projects/animation.png" class="d-block w-100" alt="project 2" style="height: 350px;">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="/img/projects/carosel3.jpg" class="d-block w-100" alt="project 3" style="height: 350px;">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+        <!-- Carousel end -->
+
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary shadow-sm fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">Yogi Astriana</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,14 +105,7 @@
     <section class="jumbotron text-center">
       <img src="img/fotoku.jpg" alt="Yogi Astriana" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4 text-dark">Yogi Astriana</h1>
-      <p class="lead text-dark">Web Developer</p>
-      <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#ffffff"
-          fill-opacity="10"
-          d="M0,64L48,80C96,96,192,128,288,128C384,128,480,96,576,80C672,64,768,64,864,96C960,128,1056,192,1152,186.7C1248,181,1344,107,1392,69.3L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-        ></path>
-      </svg> -->
+      <p class="lead text-dark"><span>Web Developer</span></p>
     </section>
     <!-- Akhir Jumbotron -->
 
@@ -94,13 +129,6 @@
           </div>
         </div>
       </div>
-      <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#e2edff"
-          fill-opacity="10"
-          d="M0,96L48,122.7C96,149,192,203,288,192C384,181,480,107,576,80C672,53,768,75,864,101.3C960,128,1056,160,1152,165.3C1248,171,1344,149,1392,138.7L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-        ></path>
-      </svg> -->
     </section>
     <!-- Akhir About -->
 
@@ -117,7 +145,7 @@
             <div class="card">
               <img src="img/projects/kopikenangansenja.png" class="card-img-top" alt="Project 1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Website kopi kenangan</p>
                 <a href="https://yogiastriana.github.io/kedaikopi-kenangan/" class="btn btn-primary">View Detail</a>
               </div>
             </div>
@@ -126,7 +154,7 @@
             <div class="card">
               <img src="img/projects/animation.png" class="card-img-top" alt="Project 2" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">saya membuat 3 card dengan efek transisi yang sangat luar biasa.</p>
                 <a href="https://yogiastriana.github.io/animation/" class="btn btn-primary">View Detail</a>
               </div>
             </div>
@@ -160,54 +188,16 @@
           </div>
         </div>
       </div>
-
-      <!-- <section id="my-keyboards">
-        <div class="container">
-          <div class="row text-center mb-3">
-            <div class="col">
-              <h2>My Keyboards</h2>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6 col-lg-4 mb-3">
-              <div class="keyboard-box">
-                <h4 class="keyboard-name">Keychron K2</h4>
-                <img src="img/keyboards/3.png" alt="Keychron K3" class="keyboard-img" />
-                <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4 mb-3">
-              <div class="keyboard-box">
-                <h4 class="keyboard-name">Womier RGB</h4>
-                <img src="img/keyboards/1.png" alt="Womier RGB" class="keyboard-img" />
-                <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4 mb-3">
-              <div class="keyboard-box">
-                <h4 class="keyboard-name">Red Dragon</h4>
-                <img src="img/keyboards/2.png" alt="Red Dragon" class="keyboard-img" />
-                <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section> -->
-
-      <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#ffffff"
-          fill-opacity="10"
-          d="M0,192L30,208C60,224,120,256,180,245.3C240,235,300,181,360,181.3C420,181,480,235,540,261.3C600,288,660,288,720,272C780,256,840,224,900,218.7C960,213,1020,235,1080,245.3C1140,256,1200,256,1260,250.7C1320,245,1380,235,1410,229.3L1440,224L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
-        ></path>
-      </svg> -->
     </section>
     <!-- Akhir Project -->
+
+
+
 
     <!-- Contact -->
     <section id="contact">
       <div class="container">
-        <div class="row text-center mb-3">
+        <div class="row text-center mb-10">
           <div class="col">
             <h2>Contact Me</h2>
           </div>
@@ -241,20 +231,15 @@
           </div>
         </div>
       </div>
-      <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#0d6efd"
-          fill-opacity="10"
-          d="M0,128L30,149.3C60,171,120,213,180,224C240,235,300,213,360,192C420,171,480,149,540,160C600,171,660,213,720,197.3C780,181,840,107,900,101.3C960,96,1020,160,1080,197.3C1140,235,1200,245,1260,234.7C1320,224,1380,192,1410,176L1440,160L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
-        ></path>
-      </svg> -->
     </section>
     <!-- Akhir Contact -->
 
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center ">
-      <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/yogi_astriana19/" class="text-white fw-bold">Yogi Astriana</a></p>
+
+    <!-- awal footer -->
+    <footer class="footer bg-secondary">
+      <p class="copy text-center text-light">Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/yogi_astriana19/" class="text-white fw-bold">Yogi Astriana</a></p>
     </footer>
+
     <!-- Akhir Footer -->
 
     <script
