--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS start-->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
     <!-- Bootstrap CSS end-->
 
     <!-- Bootstrap Icons -->
@@ -32,48 +27,6 @@
     <title>My Portfolio | Yogi Astriana</title>
   </head>
   <body id="home">
-
-        <!-- Carousel start -->
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="/img/projects/kopikenangansenja.png" class="d-block w-100" alt="project 1" style="height: 350px;">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="/img/projects/animation.png" class="d-block w-100" alt="project 2" style="height: 350px;">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="/img/projects/carosel3.jpg" class="d-block w-100" alt="project 3" style="height: 350px;">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-        <!-- Carousel end -->
-
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-secondary shadow-sm fixed-top">
       <div class="container">
@@ -103,9 +56,16 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/fotoku.jpg" alt="Yogi Astriana" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/fotoku4.jpg" alt="Yogi Astriana" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4 text-dark">Yogi Astriana</h1>
       <p class="lead text-dark"><span>Web Developer</span></p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#fff"
+          fill-opacity="1"
+          d="M0,192L48,197.3C96,203,192,213,288,208C384,203,480,181,576,176C672,171,768,181,864,186.7C960,192,1056,192,1152,197.3C1248,203,1344,213,1392,218.7L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
     </section>
     <!-- Akhir Jumbotron -->
 
@@ -114,7 +74,7 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col" data-aos="fade-down">
-            <h2>About Me</h2>
+            <h2>Tentang Saya</h2>
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
@@ -137,16 +97,16 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>My Projects</h2>
+            <h2>Proyek</h2>
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-4 mb-3" >
+          <div class="col-md-4 mb-3">
             <div class="card">
               <img src="img/projects/kopikenangansenja.png" class="card-img-top" alt="Project 1" />
               <div class="card-body">
-                <p class="card-text">Website kopi kenangan</p>
-                <a href="https://yogiastriana.github.io/kedaikopi-kenangan/" class="btn btn-primary">View Detail</a>
+                <p class="card-text">Website kopi kenangan dibuat untuk orang-orang yang merindukan kenangan.</p>
+                <a href="https://yogiastriana.github.io/kedaikopi-kenangan/" class="btn btn-primary" target="_blank">Lihat Detail</a>
               </div>
             </div>
           </div>
@@ -155,34 +115,34 @@
               <img src="img/projects/animation.png" class="card-img-top" alt="Project 2" />
               <div class="card-body">
                 <p class="card-text">saya membuat 3 card dengan efek transisi yang sangat luar biasa.</p>
-                <a href="https://yogiastriana.github.io/animation/" class="btn btn-primary">View Detail</a>
+                <a href="https://yogiastriana.github.io/animation/" class="btn btn-primary" target="_blank">Lihat Detail</a>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3" data-aos="flip-right" data-aos-delay="1000">
             <div class="card">
-              <img src="img/projects/carosel3.jpg" class="card-img-top" alt="Project 3" />
+              <img src="img/projects/Undanganpernikahan2.png" class="card-img-top" alt="Undangan Pernikahan" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="" class="btn btn-primary">View Detail</a>
+                <p class="card-text">Undangan Pernikahan yang sangat powerful terdapat fitur pesan kehadiran, maps.</p>
+                <a href="https://yogiastriana.github.io/undanganpernikahan/" class="btn btn-primary" target="_blank">Lihat Detail</a>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3" data-aos="flip-right" data-aos-delay="500">
             <div class="card">
-              <img src="img/projects/carosel4.jpg" class="card-img-top" alt="Project 4" />
+              <img src="img/projects/Todana.png" class="card-img-top" alt="Project 4" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="" class="btn btn-primary">View Detail</a>
+                <p class="card-text">Website E-Commerce Todana berbasis website penyedia berbagai Buku.</p>
+                <a href="https://yogiastriana.github.io/todana-e_commerce/" class="btn btn-primary" target="_blank">Lihat Detail</a>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3" data-aos="flip-right" data-aos-delay="1000">
+          <div class="col-md-4 mb-5" data-aos="flip-right" data-aos-delay="1000">
             <div class="card">
-              <img src="img/projects/5.jpg" class="card-img-top" alt="Project 5" />
+              <img src="img/projects/artikel.png" class="card-img-top" alt="Project 5" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="" class="btn btn-primary">View Detail</a>
+                <p class="card-text">Project pertamaku membuat artikel menggunakan HTML dan CSS.</p>
+                <a href="https://yogiastriana.github.io/artikelpertamaku/" class="btn btn-primary" target="_blank">Lihat Detail</a>
               </div>
             </div>
           </div>
@@ -191,15 +151,42 @@
     </section>
     <!-- Akhir Project -->
 
-
-
+    <!-- Carousel start-->
+    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+          <img src="./img/projects/kopikenangansenja.png" class="d-block w-100" alt="kopi kenangan senja" style="height: 500px" />
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="./img/projects/animation.png" class="d-block w-100" alt="animation" style="height: 500px" />
+        </div>
+        <div class="carousel-item">
+          <img src="./img/projects/Undanganpernikahan2.png" class="d-block w-100" alt="undangan pernikahan" style="height: 500px" />
+        </div>
+        <div class="carousel-item">
+          <img src="./img/projects/Todana.png" class="d-block w-100" alt="todana" style="height: 500px" />
+        </div>
+        <div class="carousel-item">
+          <img src="./img/projects/artikel.png" class="d-block w-100" alt="artikel" style="height: 500px" />
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!-- Carousel end -->
 
     <!-- Contact -->
     <section id="contact">
       <div class="container">
         <div class="row text-center mb-10">
           <div class="col">
-            <h2>Contact Me</h2>
+            <h2>Hubungi</h2>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -208,7 +195,7 @@
               <strong>Terimakasih!</strong> Pesan anda sudah kami terima.
               <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
-            <form name="wpu-contact-form">
+            <form name="contact-form">
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Lengkap</label>
                 <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
@@ -234,7 +221,6 @@
     </section>
     <!-- Akhir Contact -->
 
-
     <!-- awal footer -->
     <footer class="footer bg-secondary">
       <p class="copy text-center text-light">Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/yogi_astriana19/" class="text-white fw-bold">Yogi Astriana</a></p>
@@ -242,11 +228,7 @@
 
     <!-- Akhir Footer -->
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
@@ -287,8 +269,8 @@
     </script>
 
     <script>
-      const scriptURL = 'https://script.google.com/macros/s/AKfycbzjWwvjJihKz3-24SxEnHM5XFjNPgQd_dv3uD_fgjLSp_4AAXsC6IC4C_ECvWyLkGsuBg/exec';
-      const form = document.forms['wpu-contact-form'];
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbx1XHYng4bCH0CJj7HSRfBSOCpGRN7oc3aqEfaa8xMmujr4nqMjfbqN6ZoJXZnxXIdo/exec';
+      const form = document.forms['contact-form'];
       const btnKirim = document.querySelector('.btn-kirim');
       const btnLoading = document.querySelector('.btn-loading');
       const myAlert = document.querySelector('.my-alert');
@@ -313,13 +295,5 @@
           .catch((error) => console.error('Error!', error.message));
       });
     </script>
-    <!-- <script type="text/javascript" src="js/vanilla-tilt.min.js"></script>
-    <script type="text/javascript">
-      VanillaTilt.init(document.querySelectorAll('.keyboard-box'), {
-        max: 35,
-        speed: 1000,
-        glare: true,
-      });
-    </script> -->
   </body>
 </html>
